--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,18 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
+        "@types/http-errors": "^2.0.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "http-errors": "^2.0.0",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
         "@types/node": "^20.2.5",
+        "dotenv": "^16.1.3",
         "nodemon": "^2.0.22",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
