--- a/api/package.json
+++ b/api/package.json
@@ -8,13 +8,15 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "http-errors": "^2.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "spotify-web-api-node": "^5.0.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
         "@types/node": "^20.2.5",
+        "@types/spotify-web-api-node": "^5.0.7",
         "dotenv": "^16.1.3",
         "nodemon": "^2.0.22",
         "ts-node": "^10.9.1",
