--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "exportall.config.folderListener": ["/src/routes"]
+    "exportall.config.folderListener": ["/src/routes", "/src/services"]
 }
