middleware added, along with refactoring the error handler. Added an action object which gives user the link to login, in case they are unauthorized to login

--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "exportall.config.folderListener": ["/src/routes", "/src/services"]
+    "exportall.config.folderListener": [
+        "/src/routes",
+        "/src/services",
+        "/src/middlewares"
+    ]
 }
