--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "categories": [
         "Other"
     ],
-    "activationEvents": [],
+    "activationEvents": [
+        "onStartupFinished"
+    ],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [
             {
                 "command": "spotify-controller.helloWorld",
+                "category": "SpotifyController",
                 "title": "Hello World"
             }
         ]
