refactor code, and added a play pause command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "contributes": {
         "commands": [
             {
+                "command": "spotify-controller.playPause",
+                "category": "SpotifyController",
+                "title": "Play Pause"
+            },
+            {
                 "command": "spotify-controller.helloWorld",
                 "category": "SpotifyController",
                 "title": "Hello World"
