added the port to the configuration, so the user can change it, in case of a conflict

--- a/package.json
+++ b/package.json
@@ -25,6 +25,18 @@
                 "category": "SpotifyController",
                 "title": "Hello World"
             }
+        ],
+        "configuration": [
+            {
+                "title": "Spotify Controller",
+                "properties": {
+                    "spotifyControllerApiPort": {
+                        "description": "Run the API server on the given port",
+                        "type": "number",
+                        "default": 61234
+                    }
+                }
+            }
         ]
     },
     "scripts": {
