--- a/package.json
+++ b/package.json
@@ -34,6 +34,16 @@
                         "description": "Run the API server on the given port",
                         "type": "number",
                         "default": 61234
+                    },
+                    "spotifyControllerClientId": {
+                        "description": "Enter your own client id from the developer spotify console",
+                        "type": "string",
+                        "default": "clientId"
+                    },
+                    "spotifyControllerClientSecret": {
+                        "description": "Enter your own client secret from the developer spotify console",
+                        "type": "string",
+                        "default": "clientSecret"
                     }
                 }
             }
