a login command regsitered, which would send users to the /auth/login url

--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "contributes": {
         "commands": [
             {
+                "command": "spotify-controller.login",
+                "category": "SpotifyController",
+                "title": "Login"
+            },
+            {
                 "command": "spotify-controller.playPause",
                 "category": "SpotifyController",
                 "title": "Play Pause"
