play-pause commands added, and along with refactoring the playPause command to instead call the play/pause commands instead

--- a/package.json
+++ b/package.json
@@ -31,6 +31,16 @@
                 "title": "Play Pause"
             },
             {
+                "command": "spotify-controller.pause",
+                "category": "SpotifyController",
+                "title": "Pause"
+            },
+            {
+                "command": "spotify-controller.play",
+                "category": "SpotifyController",
+                "title": "Play"
+            },
+            {
                 "command": "spotify-controller.nextSong",
                 "category": "SpotifyController",
                 "title": "Next Song"
