--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
         "test": "node ./out/test/runTest.js"
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "http-errors": "^2.0.0",
@@ -155,25 +156,26 @@
         "spotify-web-api-node": "^5.0.2"
     },
     "devDependencies": {
-        "@types/vscode": "^1.78.0",
+        "@types/axios": "^0.14.0",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
         "@types/glob": "^8.1.0",
+        "@types/http-errors": "^2.0.1",
         "@types/mocha": "^10.0.1",
+        "@types/morgan": "^1.9.4",
         "@types/node": "20.2.5",
+        "@types/spotify-web-api-node": "^5.0.7",
+        "@types/vscode": "^1.78.0",
         "@typescript-eslint/eslint-plugin": "^5.59.8",
         "@typescript-eslint/parser": "^5.59.8",
+        "@vscode/test-electron": "^2.3.2",
+        "dotenv": "^16.1.3",
         "eslint": "^8.41.0",
         "glob": "^8.1.0",
         "mocha": "^10.2.0",
-        "@vscode/test-electron": "^2.3.2",
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
-        "@types/morgan": "^1.9.4",
-        "@types/spotify-web-api-node": "^5.0.7",
-        "dotenv": "^16.1.3",
         "nodemon": "^2.0.22",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.0.4",
-        "@types/http-errors": "^2.0.1"
+        "typescript": "^5.0.4"
     }
 }
