--- a/package.json
+++ b/package.json
@@ -76,11 +76,6 @@
                 "title": "Seek"
             },
             {
-                "command": "spotify-controller.playTrack",
-                "category": "SpotifyController",
-                "title": "Play Track"
-            },
-            {
                 "command": "spotify-controller.addToQueueWithoutConfirmation",
                 "category": "SpotifyController",
                 "title": "Add To Queue Without Confirmation"
@@ -89,6 +84,16 @@
                 "command": "spotify-controller.addToQueue",
                 "category": "SpotifyController",
                 "title": "Add To Queue"
+            },
+            {
+                "command": "spotify-controller.playTrackWithoutContext",
+                "category": "SpotifyController",
+                "title": "Play Track Without Context"
+            },
+            {
+                "command": "spotify-controller.playTrackWithoutContextWithoutConfirmation",
+                "category": "SpotifyController",
+                "title": "Play Track Without Context and Confirmation"
             },
             {
                 "command": "spotify-controller.playTrackWithoutConfirmation",
