playTrackWithotuContext was missing, fixed

--- a/package.json
+++ b/package.json
@@ -86,6 +86,16 @@
                 "title": "Add To Queue"
             },
             {
+                "command": "spotify-controller.playTrack",
+                "category": "SpotifyController",
+                "title": "Play Track"
+            },
+            {
+                "command": "spotify-controller.playTrackWithoutConfirmation",
+                "category": "SpotifyController",
+                "title": "Play Track Without Confirmation"
+            },
+            {
                 "command": "spotify-controller.playTrackWithoutContext",
                 "category": "SpotifyController",
                 "title": "Play Track Without Context"
@@ -94,11 +104,6 @@
                 "command": "spotify-controller.playTrackWithoutContextWithoutConfirmation",
                 "category": "SpotifyController",
                 "title": "Play Track Without Context and Confirmation"
-            },
-            {
-                "command": "spotify-controller.playTrackWithoutConfirmation",
-                "category": "SpotifyController",
-                "title": "Play Track Without Confirmation"
             },
             {
                 "command": "spotify-controller.switchDevice",
