--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "spotify-controller",
     "displayName": "SpotifyController",
     "description": "To be edited later",
+    "publisher": "AnmolJhamb",
     "author": {
         "name": "Anmol Jhamb",
         "email": "talktoanmol@outlook.com",
